# Simple-Instant-Messager

./: .gitignore  CMakeLists.txt  CMakeLists.txt.google  CMakeLists.txt.in  README.md
src/: BaseClient.cpp  BaseClient.h  BaseServer.cpp  BaseServer.h  CMakeLists.txt  ClientInterface.h  FileHandler.cpp  FileHandler.h  FileHandler.h.autosave  Handler.cpp  Handler.h  Handler_templ.cpp  Handler_templ.h  HandlersExceptions.h  MessageHandler.cpp  MessageHandler.h  MessageReciveServer.cpp  MessageReciveServer.h  MessageSendClient.cpp  MessageSendClient.h  main.cpp
src/comunication/: CMakeLists.txt  MessageReciveServer.cpp  MessageReciveServer.h  MessageSendClient.cpp  MessageSendClient.h  MessagesDefinitions.h  ServerInterface.h
src/comunication/include/: ClientInterface.h  ComunicationExceptions.h  ServerInterface.h
src/handlers/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  Handler_templ.cpp  Handler_templ.h  HandlersExceptions.h  MessageHandler.cpp  MessageHandler.h
src/handlers/include/: FileHandlerInterface.h  MessageHandlerInterface.h
src/managers/: CMakeLists.txt  MessagesReciverManager.cpp  MessagesReciverManager.h  MessagesSenderManager.cpp  MessagesSenderManager.h
src/managers/include/: MessReciverMangrInterface.h  MessSenderMangrInterface.h
src/messanger/: CMakeLists.txt  Chat.cpp  Chat.h  ChatUI.cpp  ChatUI.h  Loger.cpp  Loger.h  MainScreen.cpp  MainScreen.h
src/messanger/include/: ChatInterface.h  ChatUIinterface.h  LogerInterface.h  enumMenuStatus.h
src/timer/: CMakeLists.txt  Timer.cpp
src/timer/include/: TimerInterface.h
test/: CMakeLists.txt  MockClientInterface.cpp  MockMessageHandlerInterface.cpp  MockServerInterface.cpp  integration_MessagesReciverManager.cpp  integration_MessagesSenderManager.cpp  test_Chat.cpp  test_FileHandler.cpp  test_FileHandler.cpp.autosave  test_MessageHandler.cpp  test_MessageReciveServer.cpp  test_MessagesReciverManager.cpp  test_MessagesSenderManager.cpp  test_main.cpp
test/mocks/: MockChatUIinterface.h  MockClientInterface.h  MockLogerInterface.h  MockMessReciverMangrInterface.h  MockMessSenderMangrInterface.h  MockMessageHandlerInterface.h  MockServerInterface.h  MockTimerInterface.h
